k8s/ollama-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama-ingress
  namespace: cmpm118
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: haproxy
  rules:
    - host: ecoai-ollama.nrp-nautilus.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ollama-svc
                port:
                  number: 11434
  tls:
    - hosts:
        - ecoai-ollama.nrp-nautilus.io
